--- a/build.gradle
+++ b/build.gradle
@@ -2,20 +2,23 @@
 
 buildscript {
     repositories {
-        jcenter()
         google()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
-        classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.5.2'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        //classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.5.2'
+        //classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
     }
 }
 
 allprojects {
     repositories {
-        jcenter()
         google()
+        maven { url 'https://maven.google.com' }
+        //maven { url "http://pay.cards/maven" }
+        mavenCentral()
+        maven { url "https://jitpack.io" }
     }
 }
 
