--- a/ink/build.gradle
+++ b/ink/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.jfrog.bintray'
+// Removed 'com.jfrog.bintray' as it is no longer necessary
 apply plugin: 'maven-publish'
 
 android {
@@ -50,7 +50,7 @@ publishing {
     publications {
         aar(MavenPublication) {
             groupId = GROUP_ID
-            artifactId ARTIFACT_ID
+            artifactId = ARTIFACT_ID
             version = VERSION_NAME
 
             artifact bundleRelease
@@ -86,19 +86,10 @@ publishing {
     }
 }
 
-bintray {
-    user = System.getenv('BINTRAY_USER')
-    key = System.getenv('BINTRAY_API_KEY')
-    publications = ['aar']
-    publish = true
-    pkg {
-        repo = BINTRAY_REPO
-        name = BINTRAY_NAME
-        userOrg = BINTRAY_USER_ORG
-        licenses = [BINTRAY_LICENSE]
-        vcsUrl = VCS_URL
-        version {
-            name = VERSION_NAME
-        }
-    }
+// Removed the Bintray block as it is no longer needed
+
+// Make sure to have JitPack repository listed in your repositories
+repositories {
+    mavenCentral()  // If necessary
+    maven { url "https://jitpack.io" } // JitPack repository
 }
